fix: improve readability - Rearranged various HTML elements and CSS selectors to make the code easier to read. - Fixed minor text errors and renamed several html tags/attributes.

--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,23 @@
     --dark-brown: #301d0b;
 }
 
+body {
+    display: grid;
+    grid-template-rows: 180px 400px 400px;
+    grid-template-columns: 280px 500px 500px;
+    font-family: 'roboto', sans-serif;
+    background-color: #333333;
+    color: #333333;
+}
+
 /* TYPOGRAPHY ---------------------------------------- */
 
 b,
 .trending-text,
 .sub-project-text,
 .sub-trend-text {
-    color: var(--dark-brown);
     font-weight: bold;
+    color: var(--dark-brown);
 }
 
 .dashboard-text {
@@ -29,8 +38,9 @@ b,
 }
 
 .header-small-text {
-    font-size: .8rem;
     margin-bottom: .6em;
+    font-size: .8rem;
+    
 }
 
 .header-big-text {
@@ -44,31 +54,19 @@ b,
     color: var(--dark-brown)
 }
 
-.trending-text {
+.trend-header {
     margin-top: 1.2rem;
     font-size: 1.2rem;
-}
-
-
-
-body {
-    display: grid;
-    grid-template-rows: 180px 400px 400px;
-    grid-template-columns: 280px 500px 500px;
-    font-family: 'roboto', sans-serif;
-    background-color: #333333;
-    color: #333333;
 }
 
 /* DASHBOARD ----------------------------------------- */
 
 .dashboard {
     grid-row: span 3;
-    background-color: lightblue;
     background-image: url(./images/greens.jpg);
+    background-blend-mode: lighten;
     background-size: cover;
     background-color: rgba(255, 255, 255, 0.20);
-    background-blend-mode: lighten;
     color: white;
 }
 
@@ -87,9 +85,10 @@ body {
 .sub-dashboard {
     display: flex;
     flex-direction: column;
-    font-size: 1.2rem;
     margin: 3.5em 0em 0em 2em;
     gap: 1em;
+    font-size: 1.2rem;
+    
 }
 
 .dashboard-block {
@@ -103,10 +102,14 @@ body {
     fill: var(--brown)
 }
 
+.proj {
+    margin-left: 1em;
+}
+
 .reference {
-    text-align: center;
-    font-size: .8rem;
     margin-top: 100%;
+    font-size: .8rem;
+    text-align: center;
 }
 
 /* HEADER ------------------------------------------- */
@@ -128,33 +131,26 @@ header {
 }
 
 .search {
-    background-color: lightgray;
     width: 480px;
     height: 25px;
-    border-radius: 20px;
     margin-bottom: 1em;
+    border-radius: 20px;
+    background-color: lightgray;
 }  
 
 .profile-corner {
-    /* border: 2px solid pink; */
     display: flex;
     justify-content: center;
-    gap: 1.5em;
     align-items: center;
-}
-
-.profile-img-1,
-.profile-img-2,
-.trend-profile-img {
-    border-radius: 50%;
+    gap: 1.5em;
 }
 
 .profile-header {
     display: flex;
-    margin-left: 2em;
-    margin-bottom: 1em;
-    gap: 1.5em;
     align-items: center;
+    gap: 1.5em;
+    margin-bottom: 1em;
+    margin-left: 2em;
 }
 
 .buttons {
@@ -166,14 +162,19 @@ header {
 
 .btn {
     all: unset;
+    box-shadow: 2px 2px 5px gray;
+    border-radius: 15px;
     padding: 7px 30px;
     font-weight: bold;
-    border-radius: 15px;
     background-color: var(--brown);
-    box-shadow: 2px 2px 5px gray;
     color: whitesmoke;
 }
 
+.profile-img-1,
+.profile-img-2,
+.trend-profile-img {
+    border-radius: 50%;
+}
 
 /* MAIN CONTENT ----------------------------------- */
 main {
@@ -188,63 +189,48 @@ main {
 }
 
 .projects {
-    width: 70%;
-    height: 700px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    background-color: var(--light-green);
     gap: 1.2rem;
     margin-left: 1rem;
+    width: 70%;
+    height: 700px;
+    background-color: var(--light-green);
 }
 
 .project {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 5px;
-    border-left: 8px solid var(--brown);
-    background-color: whitesmoke;
-    padding: 1.5em 1em .5em 1em;
     box-shadow: 2px 2px 5px gray;
+    border-left: 8px solid var(--brown);
+    border-radius: 5px;
+    padding: 1.5em 1em .5em 1em;
+    background-color: whitesmoke;
 }
 
 .project-icons {
     align-self: flex-end;
 }
 
-.proj {
-    margin-left: 1em;
-}
-
-
 /* ANNOUNCEMENTS/TRENDING ---------------------------------- */
 
-.other {
-    width: 30%;
-    height: 700px;
+.side-content {
     display: grid;
-    margin-right: 1.5em;
     grid-template-rows: 1fr 50px 1fr;
     grid-template-columns: 1fr;
+    margin-right: 1.5em;
+    width: 30%;
+    height: 700px;  
 }
 
 .announcements,
 .trending {
-    border-radius: 5px;
-    background-color: whitesmoke;
-    padding: 1.2em;
     box-shadow: 2px 2px 5px gray;
-}
-
-.text-block {
-    padding: 1em 0em;
-    border-bottom: .5px solid lightgray;
-}
-
-
-#bottom {
-    border: none;
+    border-radius: 5px;
+    padding: 1.2em;
+    background-color: whitesmoke;  
 }
 
 .trending {
@@ -252,10 +238,19 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
 }
 
 .trend-block {
     display: flex;
     gap: 1em;
 }
+
+.text-block {
+    border-bottom: .5px solid lightgray;
+    padding: 1em 0em;  
+}
+
+#bottom {
+    border: none;
+}
+
